WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126741
[GTK] Fix return value of WebKitDownload::created-destination
https://bugs.webkit.org/show_bug.cgi?id=126741
Summary
[GTK] Fix return value of WebKitDownload::created-destination
Carlos Garcia Campos
Reported
2014-01-10 01:27:30 PST
Fortunately this is not an API break because it was actually unused, if anybody is using a boolean callback it will still work. I guess it's another copy-paste error :-(
Attachments
Patch
(4.60 KB, patch)
2014-01-10 01:30 PST
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-01-10 01:30:39 PST
Created
attachment 220820
[details]
Patch
WebKit Commit Bot
Comment 2
2014-01-10 01:33:31 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2014-01-12 00:41:52 PST
Committed
r161805
: <
http://trac.webkit.org/changeset/161805
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug