[GTK] Fix return value of WebKitDownload::created-destination https://bugs.webkit.org/show_bug.cgi?id=126741

Reviewed by Martin Robinson.

Source/WebKit2:

WebKitDownload::created-destination signal should be void instead
of gboolean. This doesn't break the API/ABI.

* UIProcess/API/gtk/WebKitDownload.cpp:
(webkit_download_class_init):
(webkitDownloadDestinationCreated):

Tools:

* TestWebKitAPI/Tests/WebKit2Gtk/TestDownloads.cpp: Fix return
value of several callbacks.

Canonical link: https://commits.webkit.org/144804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161805 268f45cc-cd09-0410-ab3c-d52691b4dbfc